--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
 			<version>3.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 	<distributionManagement>
 		<repository>
