--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,8 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+	</dependencies>
 
-	
 	<distributionManagement>
 		<repository>
 			<id>deploymentRepo</id>
